<resources>
    <string name="app_name">aabels-HabitTracker</string>
    <string name="action_settings">Settings</string>
    <string name="add_habit">Add Habbit</string>
    <string name="delete_habit">Delete Habbit</string>
    <string name="history">History</string>
    <string name="create">create</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="add_a_habit">Add A Habit...</string>
    <string name="history_log">History Log</string>
</resources>
