<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.ualberta.ca.aabels_habittracker.Add_Habbit">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createHabitView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:height="60dp"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:singleLine="true"
        android:hint="@string/add_a_habit"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/createHabbitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="creatHabitAction" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:id="@+id/SundaySwitch"
        android:layout_below="@+id/createHabitView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="sundaySwitch"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:id="@+id/MondaySwitch"
        android:layout_below="@+id/SundaySwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="mondaySwitch"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:id="@+id/TuesdaySwitch"
        android:layout_below="@+id/MondaySwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="tuesdaySwitch"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:id="@+id/WednesdaySwitch"
        android:layout_below="@+id/TuesdaySwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="wednesdaySwitch"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:id="@+id/ThursdaySwitch"
        android:layout_below="@+id/WednesdaySwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="thursdaySwitch"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:id="@+id/FridaySwitch"
        android:layout_below="@+id/ThursdaySwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="fridaySwitch"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:id="@+id/SaturdaySwitch"
        android:layout_below="@+id/FridaySwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:onClick="saturdaySwitch"/>

</RelativeLayout>