<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent" android:layout_height="match_parent">

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_habit"
    android:id="@+id/Add_Habit_Button"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:singleLine="false"
    android:onClick="addAHabit" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/delete_habit"
    android:id="@+id/Delete_Habbit_Button"
    android:layout_above="@+id/Add_Habit_Button"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/history"
    android:id="@+id/History_Habbit_Button"
    android:layout_above="@+id/Delete_Habbit_Button"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitListView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/History_Habbit_Button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>